# frostwm

./: .clang-format  .gitignore  Doxyfile  README.md  meson.build
include/frostwm/: input.h  log.h  monitor.h  session.h
src/: frostwm.c  input.c  log.c  main.cpp  meson.build  monitor.c  monitor.cpp  session.c  session.cpp
